<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/bleu">
    </View>
    <EditText
        android:id="@+id/insert_nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/insert_nom"
        android:autofillHints="no" />
    <EditText
        android:id="@+id/insert_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/insert_description"
        android:autofillHints="no" />
    <EditText
        android:id="@+id/insert_nombre_point"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/insert_nombrePoint"
        android:autofillHints="no" />
    <EditText
        android:id="@+id/insert_duree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/insert_duree"
        android:autofillHints="no" />
    <RadioGroup
        android:id="@+id/insert_radio_groupe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Base.Theme.Tache.insertStyle"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/insert_radio_occasionnel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/occasionnel"/>
        <RadioButton
            android:id="@+id/insert_radio_permanent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permanent"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/insert_horaire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_heure"
            android:onClick="ChangerHoraire"/>
        <Button
            android:id="@+id/insert_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_date"
            android:onClick="ChangerDate"/>
    </LinearLayout>
    <TextView
        android:id="@+id/insert_text_categorie"
        style="@style/Base.Theme.Tache.insertStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_categorie"/>
    <Spinner
        style="@style/Base.Theme.Tache.insertStyle"
        android:id="@+id/insert_spinnerCategorie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <RelativeLayout
        style="@style/Base.Theme.Tache.insertStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/insert_annuler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/insert_annuler"
            android:onClick="insertAnnuler"/>
        <Button
            android:id="@+id/insert_valider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/insert_annuler"
            android:layout_alignParentEnd="true"
            android:text="@string/insert_ajouter"
            android:onClick="insertValider"/>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <FrameLayout
        android:id="@+id/fragment_calendrier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </ScrollView>
</LinearLayout>